# rust_firewall

./: Cargo.toml  mydb.sqlite  readme.md.md
rust_firewall_gui/: package-lock.json  package.json
rust_firewall_gui/src/: App.tsx
rust_firewall_gui/src-tauri/: Cargo.toml  tauri.conf.json
rust_firewall_gui/src-tauri/src/: capture.rs  db.rs  main.rs
src/: capture.rs  db.rs  detection.rs  firewall.rs  main.rs  ui.rs
